=== 0.5.18 2014-11-12

* Updated SocialNetworkProfile and SocialNetworkPage proxy models.

=== 0.5.17 2014-10-15

* Adding MemberInsightMetrics proxy model.

== 0.5.16 2014-10-02

* Added V2::CompanyTermination proxy model
* changed terminate method in V1/V2 Company proxy model to take company_termination parameter

== 0.5.16 2014-09-24

* Added DirectConnect proxy model
* Added stats endpoint to DirectConnect proxy model

== 0.5.15 2014-09-17

* Added notification_user_id to the enterprise_setting proxy model.
* Added enterprise email settings proxy model.
* New enterprise settings added to the EnterpriseSetting proxy mode.

=== 0.5.14 2014-09-03

* Added request_support method to v2/company_user.rb
* Added V2::Configuration model
* Added Company activate method to V2 model.

=== 0.5.13 2014-08-05

* Added PartnerUser proxy model for V2.
* Added CustomerActivity proxy model for V2.

=== 0.5.12 2014-07-24

* Added phone_ext attribute to Company proxy model for both V1 and V2.
* Added CsvUpload proxy model for V2.
* Added CompanyPlace proxy model for V2.

=== 0.5.11 2014-07-10

* SocialNetworkPage proxy model added for V2.
* SocialNetworkProfile proxy model added for V2.

=== 0.5.10 2014-06-25

* Added the manage-metrics endpoint to the ReviewMetrics model.
* Added the create method to the Customer proxy model.
* Added reset endpoint to ReviewConfirmation proxy model.
* Rename kiosk review proxy model to ReviewConfirmation.
* Added Kiosk Review proxy model.
* Added create/find/update to WorkflowSystem.

=== 0.5.9 2014-06-11

* Added Custom Invitation proxy model for V2 API.
* Added Review Metrics proxy model for V2 API.
* Added Customer Call proxy model for V2 API.

=== 0.5.8 2014-05-28

* Removed old metrics calls from Enterprise and Company.
* Added Company and Enterprise Metrics proxy models.
* Modified the way company subscription parameters are sent.
* Added Promo proxy model for V2
* Added Account Level proxy model for V2.