@@ -77,6 +77,8 @@ require 'lobbyist/v2/appointment'
 require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/campaign_iteration'
 require 'lobbyist/v2/category'
+require 'lobbyist/v2/communication_campaign'
+require 'lobbyist/v2/communication_piece'
 require 'lobbyist/v2/company_metrics'
 require 'lobbyist/v2/company_place'
 require 'lobbyist/v2/company_setting'
@@ -85,8 +87,6 @@ require 'lobbyist/v2/company_termination'
 require 'lobbyist/v2/company_transaction'
 require 'lobbyist/v2/company_user'
 require 'lobbyist/v2/company'
-# require 'lobbyist/v2/communication_campaign'
-require 'lobbyist/v2/communication_piece'
 require 'lobbyist/v2/configuration'
 require 'lobbyist/v2/contact'
 require 'lobbyist/v2/csv_upload'
